--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,2 +1,4 @@
-add_executable(test_inflation main.cpp)
-target_link_libraries(test_inflation student)
+add_executable(test_inflation main.cpp
+               test_dubins testDub.cpp)
+target_link_libraries(test_inflation student
+                      test_dubins student)
