test: added NavMap test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,6 +14,10 @@ target_link_libraries(test_dijkstra student)
 add_executable(test_collision testCollision.cpp)
 target_link_libraries(test_collision student)
 
+# Test NavMap
+add_executable(test_navmap testNavMap.cpp)
+target_link_libraries(test_navmap student)
+
 # NavMap benchmark
 add_executable(navmap_benchmark benchmarkNavMap.cpp)
 target_link_libraries(navmap_benchmark student)
